--- a/web/fx/2013s1/sass/_topmenu.scss
+++ b/web/fx/2013s1/sass/_topmenu.scss
@@ -145,6 +145,7 @@ nav.category-menu {
                     }
                     a {
                         margin: 0;
+                        white-space: normal;
                     }
                     > ul {
                         padding-top: 0.5em;
